--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = ["gossip"]
+members = ["gossip", "gossip_2"]
 
 [dependencies]
 basket-gossip = { path = "./gossip"}
