--- a/gossip/Cargo.toml
+++ b/gossip/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-gossip = "2.1.0"
+solana-gossip = {workspace = true}
 solana-sdk = "2.1.0"
 solana-net-utils = "2.1.0"
 solana-streamer = "2.1.0"
