--- a/agave-gossip/Cargo.toml
+++ b/agave-gossip/Cargo.toml
@@ -11,7 +11,7 @@ bv = "0.11.1"
 clap = "2.33.1"
 crossbeam-channel = "0.5.13"
 flate2 = "1.0.31"
-indexmap = "2.6.0"
+indexmap = {version = "2.6.0", features = ["rayon"]}
 itertools = "0.12.1"
 log = "0.4.22"
 lru = "0.7.7"
@@ -46,7 +46,7 @@ solana-net-utils = { version = "2" }
 solana-perf = { version = "2" }
 solana-rayon-threadlimit = { version = "2" }
 solana-rpc-client = { version = "2" }
-solana-runtime = { version = "2" }
+solana-runtime = { version = "2", features = ["dev-context-only-utils"]}
 solana-sanitize = { version = "2" }
 solana-sdk = { version = "2" }
 solana-serde-varint = { version = "2" }
